--- a/_posts/CS231n/2022-01-19-CS231n_10.md
+++ b/_posts/CS231n/2022-01-19-CS231n_10.md
@@ -13,242 +13,260 @@ comments: true
 RNN에 대하여 알아보자
 
 
-# Image Classification
+## RNN이란?
 
-이미지 분류는 컴퓨터비전에 있어서 주요한 작업으로 <br/> 
-input image에 대하여 어떤 category에 속하는지 결정하는 과정이다.<br/>
+RNN이란 Recurrent Neural Network의 줄임말로  
+지금까지 우리가 배운 CNN 구조와는 살짝 다른 모델 구조를 갖는다.  
 
-하지만 여러가지 문제점이 존재한다.<br/>
-컴퓨터는 이미지를 볼때 사람과 같이 인식하는 것이 아니라 <br/>
-여러개의 숫자들에 대한 격자판으로 인식하기 때문이다.(숫자들의 집합) <br/>
-이것을 `sematic gap` 이라 일컫는다. <br/>
+지금까지 우리가 배운 구조를 **"Vanilla" Neural Network**라고 하자.  
 
-따라서 이미지 분류에서는 다음과 같은 변화에 상당히 취약하다. <br/>
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91852834-54cd1080-ec9c-11ea-8cb7-97c142144a6d.png" width = "300" ></p>
 
-1. Vewpoint varaition (카메라 위치 변화)
-2. Illumination (조명에 의한 변화)
-3. Deformation (다양한 자세등 객체 변형)
-4. Occulision (가려짐에 의한 변화)
-5. Background Clutter (배경과 유사한 색의 객체)
-6. Intraclass variation (생김새, 크기, 색 등 클래스 내부 분산)
+입력이 하나 들어가고, 출력이 하나 나오는 형태로 hidden layer를 거쳐서 하나의 output 형태로 나오는 것을 주로 배웠다.  
 
-`Image Classification` 에는 크게 2가지 접근법이 있다.
+하지만, 만약 입 / 출력의 갯수가 변하면 어떻게 될까?
 
-> 1. edge등의 feature를 명시적 규칙집합으로 이해하는 방법
-> 2. Data 중심으로 접근하는 방법
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91853042-98277f00-ec9c-11ea-940a-e25e2581a1bf.png" width = "500" ></p>
 
-- 명시적 규칙집합에 단점
-  1. 강인(robust) 하지 않음
-  2. 다른 객체에 분류에 대한 확장성이 낮음
+이처럼 다양한 입 / 출력을 다룰 수 있도록 만든 모델이 **RNN**이다.  
 
+예를 들어, 'one to many'의 같은 경우는 **Image Captioning**이 될 수 있고,  
+'many to one'의 경우는 **Sentiment Classification**이 될 수 있고,  
+'many to many'인 경우는 **Machine Translation**이나 **Video classification on frame level**의 경우가 될 수 있다.  
 
-이러한 문제를 해결하기 위한 방법으로 data 중심 접근 방법이 등장했다.
+입 / 출력이 단일이더라도, 찾는 과정을 가변과정으로 찾게 되면 RNN을 사용할 수 있다.
 
-- Data 중심 접근
-  1. 이미지와 라벨에 대한 데이터셋을 수집
-  2. 머신러닝을 이용하여 classifier를 학습
-  3. 새로운 이미지에 대하여 classifier 성능 평가  
+그렇다면 RNN의 흐름은 어떻게 될까?
+> 1. 입력을 받는다.
+> 2. 모든 step마다 Hidden state를 update 한다.
+> 3. 출력 값을 내보낸다.
 
+일반적인 CNN의 흐름과 비슷한 것(?) 같다.
 
-# K-Nearest Neighbor
+그림을 통해 다시 한 번 알아보자.
 
-`Image Classification`에서 사용하는 알고리즘 종류 중 하나이다.<br/>
-해당 알고리즘은 크게 두 가지 step으로 구성된다.<br/>
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91854495-c8701d00-ec9e-11ea-857f-7e8f798cddde.png" width = "500" ></p>
 
-1. `train` : 모든 데이터와 라벨을 기억
-2. `predict` : 새로운 input에 대하여 training한 이미지와 가장 유사한 label을 예측
+매 step마다 $x_t$가 들어오고 기존에 있던 $h_{t-1}$를 가지고, $h_t$를 update한다.
 
-K-NN에서 주요한 파라미터는 크게 두 가지가 있다.
+이 모델에서 알아야 할 것은 **같은 set의 parameter들을 가지고 매 step마다 update를 진행한다는 것이다.**
 
-1. `K` : 이웃의 수
-2. `Distance Metric` : 유사도를 측정하는 방식 (L1, L2등)
+방금 설명한 부분을 식으로 나타내면,  
 
-우선 K에 따른 알고리즘의 차이를 알아보자.
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91855296-f30ea580-ec9f-11ea-9c88-bddb857d1ffa.png" width = "300" ></p>
 
-해당 알고리즘은 Distance Metrice을 이용해 가까운 K개의 이웃을 찾고<br/>
-이웃끼리 투표하는 방법이다. 
+여기서 비선형성을 위해 $tanh$ 함수를 사용한다.  
 
-K=1일때 살펴보면 `가장 가까운 이웃` 만을 보기 때문에 녹색 영역 가운데<br/>
-노란색 영역이 발생하거나, 초록 영역이 파란영역을 침범하는 등의 문제가 발생한다.<br/>
+---
 
-K=3, 5로 늘리게 되면 결정 경계가 더 부드러워지고 더 좋은 결과를 보인다. <br/>
-즉, K수를 높이면 잡음에 강해지는 것을 알 수 있다.
+RNN의 Computational Graph를 한 번 알아보자.  
 
+처음의 $h_0$는 대부분 0으로 초기화 한다.  
+출력인 $h_1$가 다음에는 입력으로 들어가는 모습을 볼 수 있다.  
 
-이때, 레이블링이 안된 흰색 지역은 <br/>
-K-NN이 대다수를 결정할 수 없는 지역이다. 
+또 다른 $x_2$를 받아 다시 출력으로 $h_2$를 만들어 낸다.
 
-![](/assets/image/2022-02-01-02-46-01.png)
+이 과정을 무한반복한다.
 
-이번에는 `Distnace Metrice` 에 대해 자세히 알아보자. 
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91857010-45e95c80-eca2-11ea-92d8-b00c5630a524.png" width = "500" ></p>
 
-강의에서 소개한 방법은 2가지이다. 이 외에도 다양한 방법이 존재한다.<br/>
+아까 언급했다시피 똑같은 set의 parameter를 가지고 update를 진행하는 것을 볼 수 있다.  
 
-1. `L1 distance` 단순히 두 이미지에 거리 차이를 합산하는 방법 <br/>
-   `Manhattan distance` 라고도 부른다.<br/> 
-   좌표계에 의존적인 data 사용시 사용<br/>
-    ex) 각 직원 근속연수, 봉급 등 특징적인 요소
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91856908-22261680-eca2-11ea-85b6-cf082668117b.png" width = "500" ></p>
 
- <p align="center">
+만약 출력이 다수라면 'many to many' 분류할 수 있고,  
+그에 대한 Loss function도 많다는 것을 알 수 있다.  
 
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91857201-8fd24280-eca2-11ea-848c-41e12102e4f8.png" width = "500" ></p>
 
-$${
-d1(I_1, I_2) = \displaystyle\sum_{p}\left\lvert I_1^p - I_2^p\right\rvert
-}$$
+또 다른 예로 입력이 하나이고, 출력이 다수라면 Computational graph는 다음과 같이 나타낼 수 있다.  
 
-</p>
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91857681-2b63b300-eca3-11ea-87a7-a8e0c55a6adf.png" width = "500" ></p>
 
-![L1 distance](/assets/image/2022-02-01-02-42-51.png)
+이제 Character-level language Model를 통해 RNN을 좀 더 이해해보자.  
 
-2. `L2 distance` 두 픽셀간 차이의 제곱합의 제곱근을 씌우는 방법<br/>
-   `Euclidean distance` 라고도 부른다.<br/>
-   좌표계에 의존적이지 않을때 사용
+쉽게 말해 문자열 시퀀스를 입력으로 받아서 다음 문자를 예측하는 모델을 말한다.  
 
-<p align="center">
+예를 들어 [h,e,l,o]라는 문자열 시퀀스가 있고,  
+내가 "hello"라는 문자열을 만들고 싶다고 하자.  
 
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91858000-9e6d2980-eca3-11ea-89cb-7f285c7ba4c2.png" width = "400" ></p>
 
-$${
-d2(I_1, I_2) = \sqrt{\sum_{p}(I_1^p - I_2^p)^2}
-}$$
+먼저 Input 문자를 4d 벡터로 만든 다음  
+$h_t = tanh(W_{hh}h_{t-1} + W_{xh}x_t)$
+윗 식을 이용하여 hidden layer의 값을 구해준다.  
 
-</p>
+여기서도 $W_{hh}$와 $W_{xh}$는 모두 같은 값을 사용한다.  
 
-아래 이미지를 통해 L1, L2 distance를 사용하는 상황을 시각적으로 확인 가능하다.<br/>
+그 다음 target chars를 고를 때는 확률 분포에서 샘플링을 진행한 후,  
+다음 Input chars로 넣어줄 문자를 골라준다.  
 
-![](/assets/image/2022-02-01-03-00-08.png)
-![](/assets/image/2022-02-01-03-03-33.png)
+이렇게 하는 이유는 Softmax에서 가장 높은 값이 나온 문자가 우리가 원하는 문자가 아닐 수 있기 때문이다!  
 
-우리는 사전에 K값과 distance를 사용할지 등을 결정해주어야 하는데 <br/>
-이러한 파라미터를 `Hyperparamter` 라고 부른다.<br/>
-그렇다면 우리는 어떤 K값을 사용하는 것이 좋을까? <br/>
+이러한 모델을 train을 하려면 어떻게 될까?
 
-크게 3가지 방법에 대해서 알아보자. 
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91861467-cb234000-eca7-11ea-9c9a-f90b5ea0a6bc.png" width = "500" ></p>
 
-1. 학습데이터의 정확도와 성능을 최대화 하는 파라미터를 선택
+하나의 출력값을 알기 위해서 처음부터 모든 Loss 값들을 알아야 한다..  
+이렇게 되면 계산량이 어마어마해진다.  
 
-   > 결과부터 말하자면 **절대 해서는 안되는 방법**<br/>
-   > 학습데이터에 없던 새로운 데이터에 대해 좋은 성능을 보장할 수 없다. 
-   > ![](/assets/image/2022-02-01-03-20-19.png)
+따라서 실제로 사용하는 방법은 다음과 같다.  
 
-2. 데이터를 `train`과 `test` set으로 나누어 학습시킨후 가장 성능이 좋은것을 선택
+train 할 때 한 스텝을 일정 단위로 나눈 후, 서브시퀀스의 Loss들만 계산한다.  
 
-   > 이 방법 역시 **절대 해서는 안되는 방법**<br/>
-   > 머신러닝의 궁극적인 목적은 한 번도 보지 못한 데이터에 대해서 잘 동작하는 것<br/>
-   > 그저 `test set`에서만 잘 동작하는 하이퍼 파라미터를 고른 것일 수 있기 때문<br/>
-   >  ![](/assets/image/2022-02-01-03-20-39.png)
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91861770-2a815000-eca8-11ea-80a2-583650ba0fdf.png" width = "400" ></p>
 
-3. 데이터를 `train`, `validation`, `test` set으로 분리후 `validation`에서 가장 좋은것을 선택 후<br/>
-   `test`는 단 한 번만 수행하는 방법 
+---
 
-    > 해당 방법이 가장 권장되는 방법이고 실제로 많이 쓰인다.<br/>
-    >  ![](/assets/image/2022-02-01-03-21-03.png)
+RNN은 여러 분야에서 활용될 수 있다.  
 
-4. **Cross-Validation** : `train` 데이터를 여러 부분으로 나눈 뒤 번갈아 가며 `validation`으로 지정<br/>
-   `test` 데이터를 정해놓고 마지막에만 사용하는 방법.
+여기서 발견한 신기한 점은 **다음 문자가 어떤 것이 나올지 예측하는 모델을 만들었는데, 이 모델은 전체적인 문장 구조를 파악해서 알아서 그 구조를 학습한다는 점**이다.
 
-   > 학습 자체가 계산량이 많기 때문에 딥러닝 같은 큰 모델에서는 잘 사용되지 않는다.
-   >  ![](/assets/image/2022-02-01-03-23-28.png)
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91862252-ad0a0f80-eca8-11ea-8ea8-5b5577fcb69f.png" width = "500" ></p>
 
+<center> RNN을 이용하여 Latex source를 학습한 모습 </center>
+<br>
 
-지금까지 우리는 K-Nearest Neighbor를 알아보았다.<br/>
-하지만 K-NN은 이미지를 분류함에 있어서 **절대 사용되서는 안된다.**<br/>
-그 이유는 다음과 같다.<br/>
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91862432-e478bc00-eca8-11ea-987d-8b6a7a20a0f1.png" width = "500" ></p>
 
-1. 모든 train에 대한 정보를 가지고 있어야 하므로 매우 느리다.
-2. `Distance Metric`은 픽셀단위에서 별로 유용한 정보가 아니다. (not informative)<br/>
-   ![](/assets/image/2022-02-01-03-27-47.png)
-   해당 이미지는 모두 같은 L2 distnace를 갖는다. 
-3. 차원이 늘어나면 필요한 train data가 기하급수적으로 증가한다. (차원의 저주)
+<center> RNN을 이용하여 C code를 학습한 모습 </center>
+<br>
 
+물론 증명이 안되는 수식들과 컴파일도 안되는 엉망인 코드를  적어놓았지만 그래도 이런 틀을 학습했다는 것이 매우 놀랍다..!
 
+##  Image Captioning
 
+Image Captioning이란 <u>하나의 사진을 보고 이 사진이 무엇인지 설명하는 문장을 만들어 내는 딥러닝 모델</u>을 말한다.  
 
-# Linear Classifcation
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91862820-649f2180-eca9-11ea-9d50-bccb2d780553.png" width = "500" ></p>
 
-이제는 `Linear Classfiers`에 대해 알아보자. <br/>
+사진을 보고 CNN 구조를 통과한 결과가  
+RNN의 입력으로 들어가는 모습을 볼 수 있다.  
 
-`Linear classifiers` 는 쉽게 설명하자면 `레고 블럭`과 같다. <br/>
-우리는 이 `레고 블럭` 들을 쌓아서 `Neural Network`를 생성할 수 있다. <br/>
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91863273-e8590e00-eca9-11ea-9c22-f6a1b928af78.png" width = "500" ></p>
 
-앞서 배운 K-NN은 파라미터가 없다. (하이퍼 파라미터는 존재) <br/>
-그저 `training set`을 가지고 있고, 모든 `training set`을 `test time`에 사용할 뿐이다.<br/>
+실제로 test Image가 들어가게 되면  
+Softmax를 통과하기 바로 전 Fully Connected Layer를 이용한다.  
 
-하지만 `Parametric Approach`에서는 트레이닝 데이터의 정보를 요약한후 정보를 `W`에 모아준다. <br/>
-이렇게 하게되면 더 이상 `test time`에서 `training set`이 필요하지 않다. 
+새로운 가중치 행렬을 추가하여 이미지 정보를 추가해준다.
 
-![](/assets/image/2022-02-01-03-46-13.png)
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91863882-8cdb5000-ecaa-11ea-903f-8b71870c3e82.png" width = "500" ></p>
 
-해당 방법은 가장 쉬운 모델 설계방법으로 단순히 `W`와 `x`를 곱할 뿐이다. <br/>
-일부 `bias` 를 더하는 경우도 존재한다. 이때는 **데이터와 무관하게** <br/>
-특정 클래스에 **우선권을 부여**한다. 
-ex) 고양이 데이터가 강아지 데이터 보다 많은 경우 - 고양이 클래스 bias 증가 
+그리고 RNN 구조를 이용하여 문자열 결과를 출력해준다.  
 
-쉬운 예제를 한번 살펴보자.<br/>
+Image Captioning의 여러 예들을 살펴보면
 
-      1. `input imasge`를 열벡터로 펴준다.
-      2. 해당 문제에서는 임의로 정한 `W`가 존재한다. `W` 에 1번에서 만든 열벡터롤 내적해준다.<br/>
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91863992-b1cfc300-ecaa-11ea-8249-76a0da74ce4d.png" width = "500" ></p>
 
-    (정확히는 W의 각행은 각 이미지에 대한 템플릿을 의미)<br/>
-    여기서 내적은 클래스 간 템플릿의 유사도를 측정해주는 기능을 한다.<br/>
+물론 이런 결과는 모두 **Supervised Learning**이다.  
 
-      3. 내적 결과에 `bias`를 더해준다.<br/>
+---
 
-    bias는 독립적인 데이터로 각 클래스에 scailing factor를 더해주는 것.<br/>
+조금 더 진보된 모델인 **Image Captioning with Attention**를 살펴보자.  
 
- ![](/assets/image/2022-02-01-03-53-38.png)
+Input Image를 통해 공간 정보를 담고 있는 Grid of Vector 값을 얻어낸다.  
+내가 이해하기론 Feature Map과 비슷한 개념이라 생각한다.  
 
- 하지만 `Linear Classification`에도 문제점이 존재한다. <br/>
- 각 클래스에 대해서 단 하나의 템플릿만 학습가능하다는 점이다. <br/>
- 이렇게 될 경우 풀수 없는 여러가지 문제들이 존재한다. <br/>
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91864303-05daa780-ecab-11ea-86cb-ede468681c27.png" width = "400" ></p>
 
-![](/assets/image/2022-02-01-03-56-59.png)
+그 다음 Output을 살펴보면 총 2가지의 출력이 있다는 것을 알 수 있다.  
 
-비록 `Linear Classifcation`이 풀지 못하는 다양한 문제들이 존재하지만, <br/>
-아주 쉽게 이해하고 해석할 수 있는 알고리즘 이라는데 의의가 있다. <br/>
+> - 이미지에서 어느 부분을 집중적으로 보았는지? (이미지 분포)
+> - 단어의 분포는 어떻게 되는지? (단어의 분포)
 
-우리는 지금까지 `Linear Classifier`가 어떻게 생겼고 어떻게 동작하는지를 배웠다 <br/>
-아직 어떻게 `W`를 구할수 있는지는 배우지 않았다.<br/>
-다음 시간에는 `Loss function`, `Optimization`, `CNN`에 대해 배울 예정이다.  
 
-# Question
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91866096-168c1d00-ecad-11ea-8e7a-23e4c70ca1da.png" width = "500" ></p>
 
-1. N개의 examples을 가지고 있을때, NN-classifier의 train, prediction 함수의 시간복잡도는?
+그림에서 a1, a2 등이 이미지의 분포를 나타낸 출력값,  
+d1, d2 등이 단어의 분포를 나타낸 출력값이다.  
 
-   > `Train` O(1), `Predict` O(N) <br/>
-   > predict단계에서 N개의 학습데이터 전부를 테스트이미지와 비교해야만 하므로<br/>
-   > 상당히 느리다. 우리는 train time은 느리더라도 test time은 빠르길 원한다.<br/>
+z는 다음과 같은 수식을 통해 만들어진다.  
 
-2. 최적의 하이퍼 파라미터를 찾을때 까지 학습을 다시 시키는 것은 흔한 방법인가?
+$z = \sum^L_{i=1} p_iv_i$
 
-   > 그때 그때 다르다. 하지만 시간적 여유가 있을때는 권장
+a1의 결과와 Feature의 결과를 곱해서 z를 표현하게 됩니다. 
 
+**Image Captioning with Attention**과정을 시각화하면  
 
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91866772-d2e5e300-ecad-11ea-8d0b-31663dfc5e0b.png" width = "500" ></p>
 
-# Summary
+모델의 caption을 생성하기 위해 이미지의 attention을 이동하는 모습을 볼 수 있다.  
 
-## K-NN
+즉, 의미가 있다고 생각하는 부분에 스스로 attention을 집중하는 모습을 보인다.  
 
-1.  `Image Classification`은 입력 이미지에 대하여 해당 이미지가 속하는 catergory를 찾는 기법<br/>
-    `training set`은 image와 label을 가지고, `test set`은 input의 label을 예측한다. 
-2.  `K-Nearest Neighbors` classifier는 `training set` 중에서 가장 가까운 샘플을 골라서 label을 예측
-3.  K-NN에서 하이퍼 파라미터는 `Distance Metric`과 `K` 이다.
-4.  `L1 (Manhattan)`는 특징에 의존적일 때 사용, `L2 (Eucleadean)`는 특징에 의존적이지 않을 때 사용
-5.  하이퍼 파라미터를 결정할 때, `Validation set` 을 설정하고, `Test set`은 마지막에 오직 1번만 사용한다.
+---
 
-## Linear Classification  
+이와 비슷한 Task로 **VQA(Visual Question Answering)**이라는 일이 있다.  
 
-1. `Linear Classifier`는 `레고 블럭`에 비유가능. `레고 블럭`을 쌓아서 `Nerual Network` 구성
+이미지와 질문을 동시에 던졌을 때, 답을 맞추는 과정을 말한다.  
 
-2. 수식으로 다음과 같이 표현 가능하다.
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91867046-235d4080-ecae-11ea-8927-cf488953ba0b.png" width = "500" ></p>
 
-   <p align="center"> 
-   ${ 
-      f(x, W) = Wx + b
-   }$ 
-   </p>
+이러한 Task 역시 RNN을 통해서 학습을 할 수 있다.  
 
-3. `x`는 input 이미지, `W`는 이미지에 대한 요약된 정보. `Wx`는 클래스 간 템플릿의 유사도를 측정하는 연산
+모델이 깊어질 수록 다양한 문제들에 대해서 성능이 더 좋아지는 것을 확인할 수 있다.  
 
-4. 각 클래스에 대해서 단 하나의 템플릿만 학습하므로 풀지 못하는 여러 문제가 존재
+Train을 하기 위해서 Gradient값을 구해야 하는데,
 
-5. 아주 쉽게 이해하고 해석할 수 있는 알고리즘 이라는 의의가 있다. 
+먼저 Vanilla RNN Gradient Flow를 살펴보면
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91867655-d9c12580-ecae-11ea-89a6-60660c143036.png" width = "500" ></p>
+
+RNN 하나의 cell을 통과할 때 마다 가중치 행렬의 일부를 곱하게 되는 모습을 볼 수 있다.  
+
+하나의 cell이 아닌 전체적인 cell로 gradient를 구하는 모습을 살펴보면
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91868178-6cfa5b00-ecaf-11ea-90ca-fecd92240317.png" width = "500" ></p>
+
+많은 W 행렬들이 개입하게 되어 계산량이 늘어나는 것을 확인할 수 있다.  
+
+그리고 또 하나의 문제점이 생기는데  
+
+Weight 행렬에서 특이값의 최대값에 따라 Gradient값이 폭발적으로 증가할 수도, 너무 작게 감소할 수도 있는 문제점이 발생한다.  
+
+이러한 문제점을 해결하기 위해 나온 새로운 RNN 구조가 있는데,  
+
+그것이 바로 **LSTM**이다.  
+
+## LSTM
+
+LSTM이란 Long Short Term Memory에 약자로 RNN의 새로운 구조 중 하나이다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91868959-47218600-ecb0-11ea-956e-bb5116e7ad0e.png" width = "500" ></p>
+
+기본적인 RNN 구조와 비교를 해보면,  
+LSTM은 두개의 hidden state가 존재하고 $c_t$라는 내부에만 존재하는 변수가 존재한다.  
+
+위 그림에서 보이는 $\sigma$ 함수는 Sigmoid를 뜻한다.
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91869299-b008fe00-ecb0-11ea-8386-7a2798636cc6.png" width = "500" ></p>
+
+좀 더 자세히 LSTM을 살펴보자.  
+총 4가지의 gate가 있다고 생각할 수 있다.  
+
+> - i - Input gate : cell에 대한 입력 ($x_t$에 대한 가중치)
+> - f - Forget gate : 이전 cell에 대한 정보를 얼마나 지울 것인가?
+> - o - Output gate : $c_t$를 얼마나 밖으로 드러낼 것인가?
+> - g - Gate gate(?) : Cell을 얼마나 포함 시킬 것인지?
+
+LSTM에 대한 Flow chart는 다음과 같다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91869757-36254480-ecb1-11ea-9e7a-ccb01550d059.png" width = "400" ></p>
+
+여기서 Gradient Flow 과정을 살펴보면  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91869866-57863080-ecb1-11ea-8f43-5013504a79a4.png" width = "400" ></p>
+
+하나의 cell에서 Weight행렬을 거치지 않고도 cell 단위에서 gradient 계산을 할 수 있다.  
+
+여러 cell을 거치더라도 계산량이 크게 증가하지 않는다는 것을 알 수 있다.
+
+
+즉, forget gate와 곱해지는 연산이 행렬 단위의 곱셈 연산이 아니라 element-wise (원소별 연산)이기 때문에 계산량이 크게 증가하지 않는다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91870261-cbc0d400-ecb1-11ea-9365-4fc88b3384c4.png" width = "500" ></p>
+
+
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/91870619-fb6fdc00-ecb1-11ea-8b92-e199c527faec.png" width = "500" ></p>
+
