--- a/_posts/CS231n/2022-01-22-CS231n_12.md
+++ b/_posts/CS231n/2022-01-22-CS231n_12.md
@@ -13,242 +13,337 @@ comments: true
 시각화기법에 대하여 알아보자
 
 
-# Image Classification
+##  ConvNet 안에서는 어떤 일이 일어나고 있을까?
 
-이미지 분류는 컴퓨터비전에 있어서 주요한 작업으로 <br/> 
-input image에 대하여 어떤 category에 속하는지 결정하는 과정이다.<br/>
+오늘은 ConvNets 안에서는 어떤 일들이 일어나고 있는지,  
+도대체 어떤 모습들을 보고 딥러닝 모델이 잘 작동을 하고 있는지  
+알아보는 시간을 가질 것이다.  
 
-하지만 여러가지 문제점이 존재한다.<br/>
-컴퓨터는 이미지를 볼때 사람과 같이 인식하는 것이 아니라 <br/>
-여러개의 숫자들에 대한 격자판으로 인식하기 때문이다.(숫자들의 집합) <br/>
-이것을 `sematic gap` 이라 일컫는다. <br/>
+이러한 Visualizing이 중요한 이유는 다음과 같다.  
 
-따라서 이미지 분류에서는 다음과 같은 변화에 상당히 취약하다. <br/>
+> - 딥러닝이 잘 작동하는 이유를 시각화하여 설명하기 위해
+> - 딥러닝이 잘 작동 되어도 딥러닝을 믿지 못하는 연구자들에게 딥러닝 내부 동작을 보여줌으로써 해석 가능한 부분이 있다는 것을 알려주기 위해
 
-1. Vewpoint varaition (카메라 위치 변화)
-2. Illumination (조명에 의한 변화)
-3. Deformation (다양한 자세등 객체 변형)
-4. Occulision (가려짐에 의한 변화)
-5. Background Clutter (배경과 유사한 색의 객체)
-6. Intraclass variation (생김새, 크기, 색 등 클래스 내부 분산)
+위와 같은 이유들로 딥러닝 내부를 시각화 하려는 노력들이 있었다.  
 
-`Image Classification` 에는 크게 2가지 접근법이 있다.
+첫 번째 layer는 입력 이미지와 필터의 Weight 값을 내적하여 만든 layer이다.  
 
-> 1. edge등의 feature를 명시적 규칙집합으로 이해하는 방법
-> 2. Data 중심으로 접근하는 방법
+따라서,  우리 눈으로 보았을 때 엣지 성분이 많이 검출되는 것을 확인할 수 있다.  
 
-- 명시적 규칙집합에 단점
-  1. 강인(robust) 하지 않음
-  2. 다른 객체에 분류에 대한 확장성이 낮음
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92070855-2a886980-ede8-11ea-9e24-c54f6e96d179.png" width = "500" ></p>
 
+AlexNet을 예로 들면 First Layer에서는 가로가 11, 세로가 11이고 채널이 3개이고 필터의 수가 64개가 있는 것을 뜻한다.  
 
-이러한 문제를 해결하기 위한 방법으로 data 중심 접근 방법이 등장했다.
+ResNet-18(18은 Layer의 수를 뜻한다.)은 가로가 7, 새로가 7이고 채널이 3개인 필터의 수가 64개가 있는 것을 뜻한다.  
 
-- Data 중심 접근
-  1. 이미지와 라벨에 대한 데이터셋을 수집
-  2. 머신러닝을 이용하여 classifier를 학습
-  3. 새로운 이미지에 대하여 classifier 성능 평가  
+이처럼 첫 번째 Layer에서는 엣지 성분처럼 보이는 것들을 확인할 수 있는데, 그렇다면 더 깊숙한 Layer를 시각화 한다면 어떨까?
 
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92071477-c1a1f100-ede9-11ea-8293-96080540ec19.png" width = "500" ></p>
 
-# K-Nearest Neighbor
+Layer가 깊어지면 깊어질수록 우리가 직관적으로 해석할 수 있는 부분이 적어진다.  
 
-`Image Classification`에서 사용하는 알고리즘 종류 중 하나이다.<br/>
-해당 알고리즘은 크게 두 가지 step으로 구성된다.<br/>
+그 이유는 두 번째 Layer의 결과를 보면 첫번째 Layer의 결과를 Input으로 넣고 필터 Weight들의 내적을 시킨 값이기 때문이다.  
 
-1. `train` : 모든 데이터와 라벨을 기억
-2. `predict` : 새로운 input에 대하여 training한 이미지와 가장 유사한 label을 예측
+슬라이드의 예시에서 보면 Channel의 갯수도 16개로 늘어난 것을 확인 할 수 있는데,  3채널은 RGB 이미지로 한번에 우리가 표현을 할 수 있지만,  16개의 채널을 한 번에 표현하기란 참 어렵다..  
 
-K-NN에서 주요한 파라미터는 크게 두 가지가 있다.
+그래서 Grayscale 이미지를 16개로 표현을 하였다.  
 
-1. `K` : 이웃의 수
-2. `Distance Metric` : 유사도를 측정하는 방식 (L1, L2등)
+여기서 주의해야 할 점은 시각화를 위해 <u>Normalized 작업을 거쳤다는 것</u>이다.
 
-우선 K에 따른 알고리즘의 차이를 알아보자.
+실제로는 다른 값들을 가지지만, 0~255 사이의 값으로 Normalized 작업을 해줌으로써 시각화를 가능하게 한다.  
 
-해당 알고리즘은 Distance Metrice을 이용해 가까운 K개의 이웃을 찾고<br/>
-이웃끼리 투표하는 방법이다. 
+마지막 Layer에서는 어떤 일들이 일어나고 있을까?
 
-K=1일때 살펴보면 `가장 가까운 이웃` 만을 보기 때문에 녹색 영역 가운데<br/>
-노란색 영역이 발생하거나, 초록 영역이 파란영역을 침범하는 등의 문제가 발생한다.<br/>
+AlexNet을 기준으로 Softmax를 거치기 전 Fully Connected 7 Layer에서 특징 vector들을 한 번 살펴보자.  
 
-K=3, 5로 늘리게 되면 결정 경계가 더 부드러워지고 더 좋은 결과를 보인다. <br/>
-즉, K수를 높이면 잡음에 강해지는 것을 알 수 있다.
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92072658-b603f980-edec-11ea-91b3-919ddc1a15a4.png" width = "500" ></p>
 
+한 이미지에 4096 차원의 특징 벡터들이 존재하는데  
+각 이미지 마다 특징 벡터들을 Nearest Neighbor Algorithm을 돌리게 되면,  
+(Nearest Neighbor Algorithm에 대한 설명은 [CS231n 2강 요약](https://taeyoung96.github.io/cs231n/CS231n_2/#k-nearest-neighbor-algorithm%EC%97%90-%EB%8C%80%ED%95%B4%EC%84%9C)에서 확인할 수 있다.)
 
-이때, 레이블링이 안된 흰색 지역은 <br/>
-K-NN이 대다수를 결정할 수 없는 지역이다. 
+유사한 이미지들이 검출이 되는 것을 확인 할 수 있다.  
 
-![](/assets/image/2022-02-01-02-46-01.png)
+4096차원의 특징 벡터를 PCA Algorithm이나 t-SNE Algorithm으로  
+2차원으로 차원 축소를 하게 되면  
 
-이번에는 `Distnace Metrice` 에 대해 자세히 알아보자. 
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92073008-84d7f900-eded-11ea-9858-75c6efe53014.png" width = "500" ></p>
 
-강의에서 소개한 방법은 2가지이다. 이 외에도 다양한 방법이 존재한다.<br/>
+슬라이드에 나온 그림 처럼 군집화 된 모습을 볼 수 있는데,  
+위 예시는 MNIST dataset을 가지고 2차원으로 군집화한 것을 나타낸 것이다.  
 
-1. `L1 distance` 단순히 두 이미지에 거리 차이를 합산하는 방법 <br/>
-   `Manhattan distance` 라고도 부른다.<br/> 
-   좌표계에 의존적인 data 사용시 사용<br/>
-    ex) 각 직원 근속연수, 봉급 등 특징적인 요소
+중간의 Layer들은 우리가 직관적으로 봤을 때 해석을 하기 어렵다고 언급했었다.    
+그러나 모든 Layer가 그런 것은 아니다.  
 
- <p align="center">
+Activation Map을 통과시킨 Layer의 모습을 시각화 하게 되면  
 
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92073111-dbddce00-eded-11ea-981a-dbf66c53977c.png" width = "500" ></p>
 
-$${
-d1(I_1, I_2) = \displaystyle\sum_{p}\left\lvert I_1^p - I_2^p\right\rvert
-}$$
+사람의 얼굴이 있는 부분이 활성화된 Layer가 있다는 것을 확인할 수 있다.  
+모든 Layer에서 그런 것이 아니라 **일부**의 Layer에서 저런 모습이 관찰 된다.  
 
-</p>
+---
 
-![L1 distance](/assets/image/2022-02-01-02-42-51.png)
+지금까지는 고정적인 이미지(하나의 이미지)가 들어왔을 때,  
+각 Layer에서 어떤 반응을 보이는 지 관찰을 했었다.  
 
-2. `L2 distance` 두 픽셀간 차이의 제곱합의 제곱근을 씌우는 방법<br/>
-   `Euclidean distance` 라고도 부른다.<br/>
-   좌표계에 의존적이지 않을때 사용
+그렇다면 일반적인 이미지(General한 이미지)가 들어왔을 때,  
+어떤 이미지가 들어와야 각 뉴런들의 활성화가 최대화가 되는지  
+알아볼 수 있지 않을까?  
 
-<p align="center">
+이러한 방법으로 Visualization한 방법을 **Maximally Activating Patches**라고 한다.  
 
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92074565-56f4b380-edf1-11ea-8d16-62ebffa523fc.png" width = "500" ></p>
 
-$${
-d2(I_1, I_2) = \sqrt{\sum_{p}(I_1^p - I_2^p)^2}
-}$$
+이 슬라이드의 경우 17번째 Channel에서 이미지의 일부분을 시각화한 것을 나타냈다.  
 
-</p>
+오른쪽 위의 사진을 보면 이 Channel은 푸르스름하고 눈같이 생긴 이미지에 크게 활성화 된다는 것을 추측 할 수 있다.  
 
-아래 이미지를 통해 L1, L2 distance를 사용하는 상황을 시각적으로 확인 가능하다.<br/>
+오른쪽 아래의 사진을 보면 좀 더 깊은 Layer에서 추출한 이미지인데,  
+더 깊은 Layer에서 추출을 한다면 더 큰 구조를 추출 한다는 것을 확인 할 수 있다.  
 
-![](/assets/image/2022-02-01-03-00-08.png)
-![](/assets/image/2022-02-01-03-03-33.png)
+또 다른 방법으로는 **Occlusion Experiments**라는 방법이 있는데  
+입력의 어떤 부분이 Classification을 결정했는지 알아보기 위해 사용한 방법이다.  
 
-우리는 사전에 K값과 distance를 사용할지 등을 결정해주어야 하는데 <br/>
-이러한 파라미터를 `Hyperparamter` 라고 부른다.<br/>
-그렇다면 우리는 어떤 K값을 사용하는 것이 좋을까? <br/>
+입력 이미지의 일부분을 가린 후 분류를 잘 하는지 확인하는 작업을 거치는 것이다.  
 
-크게 3가지 방법에 대해서 알아보자. 
+만약 입력 이미지의 일부를 가렸는데 네트워크 스코어에 변화가 있다면 네트워크는 그 부분을 분류를 하는데 크게 본다고 해석을 할 수 있다.  
 
-1. 학습데이터의 정확도와 성능을 최대화 하는 파라미터를 선택
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92074817-fc0f8c00-edf1-11ea-8c4b-5b9f72d34d56.png" width = "500" ></p>
 
-   > 결과부터 말하자면 **절대 해서는 안되는 방법**<br/>
-   > 학습데이터에 없던 새로운 데이터에 대해 좋은 성능을 보장할 수 없다. 
-   > ![](/assets/image/2022-02-01-03-20-19.png)
+다른 방법으로 **Saliency Maps**라는 방법도 있는데  
+이는 어떤 픽셀을 보고 이미지를 분류했는지 알아보는 방법이다.  
 
-2. 데이터를 `train`과 `test` set으로 나누어 학습시킨후 가장 성능이 좋은것을 선택
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92074890-311bde80-edf2-11ea-9956-b05b87996702.png" width = "500" ></p>
 
-   > 이 방법 역시 **절대 해서는 안되는 방법**<br/>
-   > 머신러닝의 궁극적인 목적은 한 번도 보지 못한 데이터에 대해서 잘 동작하는 것<br/>
-   > 그저 `test set`에서만 잘 동작하는 하이퍼 파라미터를 고른 것일 수 있기 때문<br/>
-   >  ![](/assets/image/2022-02-01-03-20-39.png)
+이 슬라이드 처럼 개의 이미지를 Saliency map으로 나타내면 개의 윤곽처럼 나타내는 것을 볼 수 있다.  
 
-3. 데이터를 `train`, `validation`, `test` set으로 분리후 `validation`에서 가장 좋은것을 선택 후<br/>
-   `test`는 단 한 번만 수행하는 방법 
+그렇다면 이런 Saliency map을 가지고 segmentation 작업을 진행할 수 있지도 않을까?  
 
-    > 해당 방법이 가장 권장되는 방법이고 실제로 많이 쓰인다.<br/>
-    >  ![](/assets/image/2022-02-01-03-21-03.png)
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92075028-85bf5980-edf2-11ea-8f5c-0a0526a47272.png" width = "500" ></p>
 
-4. **Cross-Validation** : `train` 데이터를 여러 부분으로 나눈 뒤 번갈아 가며 `validation`으로 지정<br/>
-   `test` 데이터를 정해놓고 마지막에만 사용하는 방법.
+가능은 하지만 성능이 그렇게 좋지는 않다... :(
 
-   > 학습 자체가 계산량이 많기 때문에 딥러닝 같은 큰 모델에서는 잘 사용되지 않는다.
-   >  ![](/assets/image/2022-02-01-03-23-28.png)
+---
 
+중간에 있는 뉴런을 하나 뽑아서 입력 이미지의 어떤 부분이 내가 선택한 뉴런에 영향을 주는지 한 번 알아보자.  
 
-지금까지 우리는 K-Nearest Neighbor를 알아보았다.<br/>
-하지만 K-NN은 이미지를 분류함에 있어서 **절대 사용되서는 안된다.**<br/>
-그 이유는 다음과 같다.<br/>
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92078371-1b5de780-edf9-11ea-98d2-146da73d808d.png" width = "500" ></p>
 
-1. 모든 train에 대한 정보를 가지고 있어야 하므로 매우 느리다.
-2. `Distance Metric`은 픽셀단위에서 별로 유용한 정보가 아니다. (not informative)<br/>
-   ![](/assets/image/2022-02-01-03-27-47.png)
-   해당 이미지는 모두 같은 L2 distnace를 갖는다. 
-3. 차원이 늘어나면 필요한 train data가 기하급수적으로 증가한다. (차원의 저주)
+우리가 네트워크를 구성할 때 ReLU를 이용하여 Activation function을 구성하는 일이 많은데,  
 
+ReLU의 positive gradient만 살려서 gradient 값을 구하면 훨씬 더 선명하게 활성화 된 위치(?)를 확인할 수 있다.  
 
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92078435-33ce0200-edf9-11ea-8e91-9d8556f4b551.png" width = "500" ></p>
 
+##  Gradient Ascent
 
-# Linear Classifcation
+Gradient를 구할 때 Backpropagation 방법으로 구하는 경우가 많았다.  
+이 방법은 입력 이미지가 들어왔을 때,   
+Weight값을 update시키기 위해 사용했던 방법인데  
 
-이제는 `Linear Classfiers`에 대해 알아보자. <br/>
+이것과는 반대(?)의 개념이 **Gradient Ascent** 방법이다.  
 
-`Linear classifiers` 는 쉽게 설명하자면 `레고 블럭`과 같다. <br/>
-우리는 이 `레고 블럭` 들을 쌓아서 `Neural Network`를 생성할 수 있다. <br/>
+네트워크의 Weight를 고정을 시킨 후,  
+해당 뉴런을 활성화 시키는 General한 입력 이미지를 찾아내는 방법이다!  
 
-앞서 배운 K-NN은 파라미터가 없다. (하이퍼 파라미터는 존재) <br/>
-그저 `training set`을 가지고 있고, 모든 `training set`을 `test time`에 사용할 뿐이다.<br/>
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92078880-ff0e7a80-edf9-11ea-9be8-2cfc4f313210.png" width = "400" ></p>
 
-하지만 `Parametric Approach`에서는 트레이닝 데이터의 정보를 요약한후 정보를 `W`에 모아준다. <br/>
-이렇게 하게되면 더 이상 `test time`에서 `training set`이 필요하지 않다. 
+여기서도 Regularization function을 추가하는데  
+이미지가 특정 뉴런의 값을 최대화시키는 방향으로 update 되는데  
+좀 더 자연스러운 이미지를 만들기 위해서 추가해준 것이라 이해하면 쉽다.  
 
-![](/assets/image/2022-02-01-03-46-13.png)
+저 위 식에서 만들어진 $I^*$가 이미지의 픽셀 값을 나타내는 것이다.  
 
-해당 방법은 가장 쉬운 모델 설계방법으로 단순히 `W`와 `x`를 곱할 뿐이다. <br/>
-일부 `bias` 를 더하는 경우도 존재한다. 이때는 **데이터와 무관하게** <br/>
-특정 클래스에 **우선권을 부여**한다. 
-ex) 고양이 데이터가 강아지 데이터 보다 많은 경우 - 고양이 클래스 bias 증가 
+그렇다면 어떻게 이미지를 만들어내는지 알아보자!  
 
-쉬운 예제를 한번 살펴보자.<br/>
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92079138-64626b80-edfa-11ea-8252-b1477968c7bb.png" width = "500" ></p>
 
-      1. `input imasge`를 열벡터로 펴준다.
-      2. 해당 문제에서는 임의로 정한 `W`가 존재한다. `W` 에 1번에서 만든 열벡터롤 내적해준다.<br/>
+> 1. 처음 이미지를 0으로 초기화 시킨다. (노이즈로 초기화 시켜도 됨!)
+> 2. Image의 현재 score를 계산한다.
+> 3. Image pixel 단위에서 Backpropagtion을 통해 gradient 값을 구한다.
+> 4. 이미지를 특정 뉴런이 최대화할 수 있도록 픽셀 단위로 update를 진행한다.  
 
-    (정확히는 W의 각행은 각 이미지에 대한 템플릿을 의미)<br/>
-    여기서 내적은 클래스 간 템플릿의 유사도를 측정해주는 기능을 한다.<br/>
+여기서 Regularization function으로 L2 norm을 사용했는데  
+일반적으로 쓰는 Regularization function이기 때문에  
+여기서 사용을 했다고 설명했다.  
 
-      3. 내적 결과에 `bias`를 더해준다.<br/>
+결과를 한 번 살펴보면,  
+<br>
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92079516-fcf8eb80-edfa-11ea-9adb-3357d487efcc.png" width = "400" ></p>
+<br>
+Dumbbell을 가장 잘 찾는 network를 Gradient Ascent 방법을 통해서  
+가장 최적화된 그림을 보면  
+마치 Dumbbell이 있는 듯한(?) 그림이 나타나는 것을 볼 수 있다.  
 
-    bias는 독립적인 데이터로 각 클래스에 scailing factor를 더해주는 것.<br/>
+이 때 색깔이 다채롭게 나타나는 이유는 실제 딥러닝 모델은 constrained optimization 과정으로 만들어지는데 여기 있는 이미지는 그러한 제약이 없어서 다채로운 색깔의 이미지가 만들어 졌다고 설명했다.  
 
- ![](/assets/image/2022-02-01-03-53-38.png)
+크게 색깔에는 신경을 쓰지 않아도 된다.
 
- 하지만 `Linear Classification`에도 문제점이 존재한다. <br/>
- 각 클래스에 대해서 단 하나의 템플릿만 학습가능하다는 점이다. <br/>
- 이렇게 될 경우 풀수 없는 여러가지 문제들이 존재한다. <br/>
+### Deep Dream
 
-![](/assets/image/2022-02-01-03-56-59.png)
+구글에서 'Deep Dream'이라는 포스팅이 소개된 적이 있다.  
+Deep Dream의 목적은 **재미있는 이미지를 만드는 것**이다.  
 
-비록 `Linear Classifcation`이 풀지 못하는 다양한 문제들이 존재하지만, <br/>
-아주 쉽게 이해하고 해석할 수 있는 알고리즘 이라는데 의의가 있다. <br/>
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92084720-c626d380-ee02-11ea-9260-ce0687d9b576.png" width = "500" ></p>
 
-우리는 지금까지 `Linear Classifier`가 어떻게 생겼고 어떻게 동작하는지를 배웠다 <br/>
-아직 어떻게 `W`를 구할수 있는지는 배우지 않았다.<br/>
-다음 시간에는 `Loss function`, `Optimization`, `CNN`에 대해 배울 예정이다.  
+방법을 한 번 살펴보면
+> 1. 입력 이미지를 CNN의 중간 Layer까지 통과를 시킨다. 
+> 2. 해당 gradient를 activation value 값으로 저장을 시킨다.  
+> 3. Backpropagation을 통해서 이미지를 update한다. 
+> 4. 위의 내용을 반복한다.  
 
-# Question
+해당 Layer의 어떤 특징이 있던지 그 특징을 가지고 gradient를 계산하면 이는 네트워크가 이미 뽑아낸 특징들을 더욱 증폭시키는 역할을 하는 것이다.  
 
-1. N개의 examples을 가지고 있을때, NN-classifier의 train, prediction 함수의 시간복잡도는?
+만약 하늘 이미지를 가지고 알고리즘을 수행하면
 
-   > `Train` O(1), `Predict` O(N) <br/>
-   > predict단계에서 N개의 학습데이터 전부를 테스트이미지와 비교해야만 하므로<br/>
-   > 상당히 느리다. 우리는 train time은 느리더라도 test time은 빠르길 원한다.<br/>
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92085937-7812cf80-ee04-11ea-84f4-8f0102383a44.png" width = "400" ></p>
 
-2. 최적의 하이퍼 파라미터를 찾을때 까지 학습을 다시 시키는 것은 흔한 방법인가?
+다음과 같은 결과가 나온다.
 
-   > 그때 그때 다르다. 하지만 시간적 여유가 있을때는 권장
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92086016-8f51bd00-ee04-11ea-8932-6dbca81c5c65.png" width = "400" ></p>
 
+이런 결과물은 네트워크를 학습시킨 데이터와 관련이 있는데  
+여기서는 개의 모양을 띈 형체가 많이 나타나는 것을 확인할 수 있다.  
 
+또 다른 Layer, 즉 얕은 Layer로 수행을 할 경우 다음과 같은 결과를 뽑을 수 있다.  
 
-# Summary
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92086231-dd66c080-ee04-11ea-994a-8b977273bf22.png" width = "400" ></p>
 
-## K-NN
+엣지 성분들이 많이 나타나는 것을 확인할 수 있다.  
 
-1.  `Image Classification`은 입력 이미지에 대하여 해당 이미지가 속하는 catergory를 찾는 기법<br/>
-    `training set`은 image와 label을 가지고, `test set`은 input의 label을 예측한다. 
-2.  `K-Nearest Neighbors` classifier는 `training set` 중에서 가장 가까운 샘플을 골라서 label을 예측
-3.  K-NN에서 하이퍼 파라미터는 `Distance Metric`과 `K` 이다.
-4.  `L1 (Manhattan)`는 특징에 의존적일 때 사용, `L2 (Eucleadean)`는 특징에 의존적이지 않을 때 사용
-5.  하이퍼 파라미터를 결정할 때, `Validation set` 을 설정하고, `Test set`은 마지막에 오직 1번만 사용한다.
+##  Feature Inversion
 
-## Linear Classification  
+**Feature Inversion**이라는 개념이 있는데 이 방법도 네트워크의 다양한 Layer에서 어떤 요소들을 포착하고 있는지 짐작할 수 있는 방법이다.  
 
-1. `Linear Classifier`는 `레고 블럭`에 비유가능. `레고 블럭`을 쌓아서 `Nerual Network` 구성
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92086736-90371e80-ee05-11ea-9b4d-ae0f43f4dc23.png" width = "500" ></p>
 
-2. 수식으로 다음과 같이 표현 가능하다.
+이미지에서 특정 Layer에서 activation map을 추출한 다음,  
+이 activation map을 가지고 이미지를 재구성하는 방법이다.  
 
-   <p align="center"> 
-   ${ 
-      f(x, W) = Wx + b
-   }$ 
-   </p>
+이 방법에서 Gradient Ascent 방법을 활용한다.  
 
-3. `x`는 input 이미지, `W`는 이미지에 대한 요약된 정보. `Wx`는 클래스 간 템플릿의 유사도를 측정하는 연산
+스코어를 최대화하는 방법 대신 특징 벡터의 거리가 최소화하는 방향으로 update를 시킨다.  
 
-4. 각 클래스에 대해서 단 하나의 템플릿만 학습하므로 풀지 못하는 여러 문제가 존재
+새로 생성한 이미지의 특징 벡터와 기존에 계산해 놓은 특징 벡터(Activation Map에서 추출한 특징 벡터)의 거리를 측정하는 것이다.  
 
-5. 아주 쉽게 이해하고 해석할 수 있는 알고리즘 이라는 의의가 있다. 
+위 슬라이드에서 나온 **Total Variation Regularizer**은 Regularization의 방법 중 하나인데 <u>상하좌우 인접한 픽셀간의 차이에 대한 페널티를 부여하는 방법</u>이다.  
+
+결과를 보면
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92087972-36cfef00-ee07-11ea-8ab9-82f4047ecb9a.png" width = "500" ></p>
+
+얕은 Layer에서 Activation Map을 추출하면 원본 영상과 비슷한 이미지를 재구성하게 된다.  
+
+하지만 깊은 Layer에서 Activation Map을 추출하면 전체적인 구조만 가지고 이미지를 재구성한다는 것을 볼 수 있다.  
+
+### Texture Synthesis
+
+텍스처 합성은 <u>구조적 컨텐츠를 활용하여 작은 디지털 샘플 이미지에서 큰 디지털 이미지를 알고리즘적으로 구성하는 과정</u>이다. (By [위키피디아](https://en.wikipedia.org/wiki/Texture_synthesis))
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92088894-75b27480-ee08-11ea-909c-8497259f57c2.png" width = "500" ></p>
+
+
+일반적인 텍스처 합성은 딥러닝으로 하지 않아도 잘 수행되지만,  
+글자를 이용하여 텍스처 합성을 하는 경우는 쉽지 않다.  
+글자가 깨지고 엉망으로 텍스처가 복사된다.  
+
+따라서 딥러닝 모델을 이용해서 텍스처 합성을 하는 방법들이 제안되었는데,  
+
+특정 Layer에서 Activation Map을 가져온 다음 **Gram Matrix**를 생성한다.  
+
+**Gram Matrix**란 <u>서로 다른 공간 정보에 있는 Channel들을 가지고 외적을 계산하여 새로운 Matrix를 만드는 것</u>을 말한다.  
+
+이 Matrix는 특징 벡터간 다양한 상관 관계를 한 번에 나타낼 수 있도록 만들어졌다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92089632-63850600-ee09-11ea-9bc9-238400627122.png" width = "500" ></p>
+
+강의에서 Gram Matrix 대신 공분산 행렬을 써도 되지만 계산량에서 이득을 보기 위해 Gram Matrix를 사용한다고 설명했다.  
+(이유는 잘 모르겠다..ㅠ)
+
+과정을 살펴보면 다음과 같다.  
+Gradient Ascent 과정과 비슷하다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92089843-a515b100-ee09-11ea-8d66-d1e82dde3b9c.png" width = "500" ></p>
+
+> 1. Input Image를 넣고 Pretrained 된 VGG Network에서 다양한 Gram Matrix를 생성한다.
+> 2. Random Noise로 초기화 된 Image를 VGG Network를 통과 시켜 Gram Matrix를 생성한다.
+> 3. Input Image와 만들어진 Image의 Gram Matrix를 비교하여 L2 distance가 최소가 되도록 Loss값을 계산한다.  
+> 4. 계산된 Loss 값을 이용하여 Backpropagation을 진행하여 이미지 픽셀의 Gradient를 계산한다.  
+> 5. Gradient Ascent 방법을 통해 이미지의 픽셀 값들을 update한다.  
+> 6. 위 단계를 반복하여 입력 이미지와 유사한 이미지가 만들어지도록 한다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92091043-24f04b00-ee0b-11ea-8777-787a1bb6d422.png" width = "500" ></p>
+
+결과를 살펴보면 얕은 Layer에서 생성한 Gram Matrix를 가지고 이미지를 만들 경우, 공간적인 구조를 잘 살리지 못했다는 것을 확인할 수 있다.  
+
+좀 더 깊은 Layer에서 생성한 Gram Matrix를 이용해야 텍스처 합성에 잘 활용할 수 있다!  
+
+##  Neural Style Transfer
+
+이러한 텍스처 합성을 예술쪽에서 적용해보면 어떨까?  
+그래서 나온 개념이 **Neural Style Transfer**이다.  
+
+정확하게 말하자면 Gram Matrix를 재구성하는 것과 Feature를 재구성 하는 것을 합하여 만들어진 이미지 결과가 Neural Style Transfer이다.  
+
+Neural Style Transfer에서는 입력이 두 가지 인데,  
+
+첫 번째 **Content Image는 우리의 최종 이미지가 어떻게 생겼으면 좋겠는지 알려주는 이미지**이고,  
+두 번째 **Style Image는 최종 이미지의 Texture가 어떻게 생겼으면 좋겠는지 알려주는 이미지**이다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92092524-29b5fe80-ee0d-11ea-8a17-6f1716a5a933.png" width = "500" ></p>
+
+최종 이미지는 Content Image의 Feature Reconstruction Loss도 최소화하고, Style Image의 Gram Matrix Reconstruction Loss도 최소화하도록 만들어진 이미지이다.  
+
+Style Transfer는 Deep Dream에 비해서 이미지를 생성할 때   Control할 것들이 많아진다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92092934-b06adb80-ee0d-11ea-9aab-e583b1655473.png" width = "400" ></p>
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92093008-c24c7e80-ee0d-11ea-9f82-d5f45757a953.png
+" width = "400" ></p>
+
+하지만 Neural Style Transfer는 수많은 forward, backward 과정을 반복해야 하므로 굉장히 느리다는 단점이 있다..
+
+따라서 Style Transfer를 위한 또 다른 네트워크를 학습시키는 방법이 있다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92094220-26bc0d80-ee0f-11ea-96c7-1e94500bd07b.png
+" width = "500" ></p>
+
+합성하고자 하는 이미지의 최적화를 전부 수행하는 것이 아니라  
+Content Image만을 입력으로 받아서 단일 네트워크를 학습시키는 방법이다.  
+
+이 네트워크 학습시에는 content loss와 style loss를 동시에 학습시키고 네트워크의 가중치를 업데이트를 시킨다.  
+
+학습은 좀 오래걸리지만 한 번 학습을 시키고 나면 이미지를 네트워크에 통과시키면 결과를 바로 볼 수 있다.  
+
+지금까지 말한 Style Transfer의 단점은 네트워크 하나당 하나의 Style Transfer만을 만들 수 밖에 없다는 점이다.  
+
+따라서 구글에서는 Content Image와 Style Image를 동시에 넣는 방식으로 다양한 스타일을 만들어 내는 논문을 제안했다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92095031-1ce6da00-ee10-11ea-8be8-dcb8e6b39d23.png
+" width = "500" ></p>
+
+---
+
+오늘의 강의를 슬라이드로 요약을 하면 다음과 같다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92095192-4e5fa580-ee10-11ea-82de-19e28133362c.png
+" width = "500" ></p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
