--- a/_posts/CS231n/2022-01-25-CS231n_14.md
+++ b/_posts/CS231n/2022-01-25-CS231n_14.md
@@ -13,242 +13,407 @@ comments: true
 강화학습에 대하여 알아보자
 
 
-# Image Classification
+##  What is Reinforcement Learning?
 
-이미지 분류는 컴퓨터비전에 있어서 주요한 작업으로 <br/> 
-input image에 대하여 어떤 category에 속하는지 결정하는 과정이다.<br/>
+Reinforcement Learning(강화 학습)이란 무엇일까?  
 
-하지만 여러가지 문제점이 존재한다.<br/>
-컴퓨터는 이미지를 볼때 사람과 같이 인식하는 것이 아니라 <br/>
-여러개의 숫자들에 대한 격자판으로 인식하기 때문이다.(숫자들의 집합) <br/>
-이것을 `sematic gap` 이라 일컫는다. <br/>
+Machine Learning의 한 범주로써 어떤 환경 안에서 정의된 에이전트가 현재의 상태를 인식하여, 선택 가능한 행동들 중 보상을 최대화하는 행동 혹은 행동 순서를 선택하는 방법이다. (by [Wikipedia](https://ko.wikipedia.org/wiki/%EA%B0%95%ED%99%94_%ED%95%99%EC%8A%B5))
 
-따라서 이미지 분류에서는 다음과 같은 변화에 상당히 취약하다. <br/>
+한 장의 슬라이드로 요약하면 다음과 같다.  
 
-1. Vewpoint varaition (카메라 위치 변화)
-2. Illumination (조명에 의한 변화)
-3. Deformation (다양한 자세등 객체 변형)
-4. Occulision (가려짐에 의한 변화)
-5. Background Clutter (배경과 유사한 색의 객체)
-6. Intraclass variation (생김새, 크기, 색 등 클래스 내부 분산)
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92432799-3607d600-f1d6-11ea-87b8-ac97bc3acf32.png" width = "600" ></p>
 
-`Image Classification` 에는 크게 2가지 접근법이 있다.
+우선 용어부터 정리를 해보면, 
 
-> 1. edge등의 feature를 명시적 규칙집합으로 이해하는 방법
-> 2. Data 중심으로 접근하는 방법
+Agent란 <u>Environment에서 Action을 취할 수 있는 물체</u>를 말한다.
+Agnet는 어떠한 Action에 의해 Reward를 최대로 받는 것이 목적이다.  
 
-- 명시적 규칙집합에 단점
-  1. 강인(robust) 하지 않음
-  2. 다른 객체에 분류에 대한 확장성이 낮음
+Environment란 <u>Agent와 상호작용을 하는 것으로 Agent에게 적절한 state를 부여</u>한다.  
 
+순서는 다음과 같다.  
 
-이러한 문제를 해결하기 위한 방법으로 data 중심 접근 방법이 등장했다.
+> 1. Environmet로 부터 Agent가 State(상태)를 부여받는다.  
+> 2. 상태를 받은 Agent가 어떠한 Action을 취한다.
+> 3. 그 Action에 대해 Agent는 보상을 받는다.
+> 4. 그리고 다음 State를 부여받게 된다.  
 
-- Data 중심 접근
-  1. 이미지와 라벨에 대한 데이터셋을 수집
-  2. 머신러닝을 이용하여 classifier를 학습
-  3. 새로운 이미지에 대하여 classifier 성능 평가  
+강화 학습을 사용하여 다음과 같은 문제들을 풀 수 있다.  
 
+> - Cart-Pole Problem (Pole을 Cart위에서 균형을 잡도록 하기)
+> - Robot Locomotion (로봇을 앞으로 가도록 하기)
+> - Atari Games (게임을 가장 높은 점수로 끝내기)
+> - Go (바둑 게임 이기기)
 
-# K-Nearest Neighbor
+##  Markov Decision Processes
 
-`Image Classification`에서 사용하는 알고리즘 종류 중 하나이다.<br/>
-해당 알고리즘은 크게 두 가지 step으로 구성된다.<br/>
+**Markov Decision Processes**는 <u>강화 학습 방법을 수식화</u> 하는 것을 말한다.  
 
-1. `train` : 모든 데이터와 라벨을 기억
-2. `predict` : 새로운 input에 대하여 training한 이미지와 가장 유사한 label을 예측
+**Markov Property**는 현재 상태로 전체 상태를 나타내는 것을 말한다.  
 
-K-NN에서 주요한 파라미터는 크게 두 가지가 있다.
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92936907-a2f4c780-f485-11ea-8abe-683eb95dc2e9.png" width = "500" ></p>  
 
-1. `K` : 이웃의 수
-2. `Distance Metric` : 유사도를 측정하는 방식 (L1, L2등)
+이러한 문자들에 의해서 정의가 되는데  
+- S는 가능한 상태 집합을 의미,  
+- A는 가능한 액션 집합을 의미,  
+- R은 (상태, 액션)의 쌍이 주어졌을 때 보상에 대한 분포
+- P는 (상태, 액션)의 쌍이 주어졌을 때 다음 상태에 대한 분포 (전이 확률)  
+- R은 보상을 받는 시간에 대해서 얼마나 중요하게 생각하는지를 의미한다.  
 
-우선 K에 따른 알고리즘의 차이를 알아보자.
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92943449-bd32a380-f48d-11ea-9c72-22a06b22ea2a.png" width = "600" ></p>
 
-해당 알고리즘은 Distance Metrice을 이용해 가까운 K개의 이웃을 찾고<br/>
-이웃끼리 투표하는 방법이다. 
+강화 학습을 수식으로 풀어쓰게 되면  
+결국 **누적 보상을 최대화 하는 $\pi^*$를 찾는 것을 목표**로 하게 된다.  
 
-K=1일때 살펴보면 `가장 가까운 이웃` 만을 보기 때문에 녹색 영역 가운데<br/>
-노란색 영역이 발생하거나, 초록 영역이 파란영역을 침범하는 등의 문제가 발생한다.<br/>
+예를 들어 한번 살펴보자..
 
-K=3, 5로 늘리게 되면 결정 경계가 더 부드러워지고 더 좋은 결과를 보인다. <br/>
-즉, K수를 높이면 잡음에 강해지는 것을 알 수 있다.
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92987984-8cd91c80-f502-11ea-9b52-e0c76bbc2f22.png" width = "600" ></p>
 
+우리가 *쪽으로 가도록 하는 길찾기 문제를 푼다고 할 때,  
+최적의 정책 $\pi$가 존재한다면 길을 훨씬 수월하게 찾을 것이다.  
 
-이때, 레이블링이 안된 흰색 지역은 <br/>
-K-NN이 대다수를 결정할 수 없는 지역이다. 
+$\pi$는 우리가 어느 위치에 있더라도 보상을 최대화 할 수 있는  
+(여기서는 목적지에 가장 빨리 도달할 수 있는) 방법을 알려준다.  
 
-![](/assets/image/2022-02-01-02-46-01.png)
+보상을 최대화 할 수 있는 방법은  
+**미래 내가 받을 보상들의 합이 최대가 되도록 하면 된다!**  
 
-이번에는 `Distnace Metrice` 에 대해 자세히 알아보자. 
+수식으로 표현해보면 다음과 같다.  
+수식을 잘은 모르지만 대략적으로 <u>미래 보상들의 합에 대한 기댓값을  
+최대화하는 식</u>이라 생각이 든다.   
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92988039-07a23780-f503-11ea-8dfb-c87847990e25.png" width = "600" ></p>  
 
-강의에서 소개한 방법은 2가지이다. 이 외에도 다양한 방법이 존재한다.<br/>
+---
 
-1. `L1 distance` 단순히 두 이미지에 거리 차이를 합산하는 방법 <br/>
-   `Manhattan distance` 라고도 부른다.<br/> 
-   좌표계에 의존적인 data 사용시 사용<br/>
-    ex) 각 직원 근속연수, 봉급 등 특징적인 요소
+우리가 사용할 정책을 살펴보기 전에  
+먼저 정의해야 할 몇 가지에 대해서 이야기를 해보자.  
 
- <p align="center">
+> - Value function : 어떤 상태 S와 정책 $\pi$가 주어졌을 때,  
+ 계산되는 누적 보상의 기댓값  
 
+Value function의 수식은 다음과 같다.  
 
-$${
-d1(I_1, I_2) = \displaystyle\sum_{p}\left\lvert I_1^p - I_2^p\right\rvert
-}$$
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92988399-1a6a3b80-f506-11ea-9adc-31e398fec470.png" width = "250" ></p>
 
-</p>
 
-![L1 distance](/assets/image/2022-02-01-02-42-51.png)
+> - Q-Value funtion : 상태 s에서 어떤 행동을 해야 가장 좋은지 알려주는 함수 - (상태, 행동) 조합이 얼마나 많은 보상을 받을 수 있는가?  
 
-2. `L2 distance` 두 픽셀간 차이의 제곱합의 제곱근을 씌우는 방법<br/>
-   `Euclidean distance` 라고도 부른다.<br/>
-   좌표계에 의존적이지 않을때 사용
+Q-Value funtion의 수식은 다음과 같다.  
 
-<p align="center">
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/92988417-4d143400-f506-11ea-8612-bd095afd5deb.png" width = "250" ></p>  
 
+---
 
-$${
-d2(I_1, I_2) = \sqrt{\sum_{p}(I_1^p - I_2^p)^2}
-}$$
+다음으로는 강화학습에서 중요한 요소 중 하나인  
+**Bellman equation**에 대해서 이야기 해보자.  
 
-</p>
+**Bellman equation**이란 <u>현재 state의 value function과 next state의 value function 사이의 관계식</u>을 나타낸 것이다.  
 
-아래 이미지를 통해 L1, L2 distance를 사용하는 상황을 시각적으로 확인 가능하다.<br/>
+우선 어떤 상태 s가 주어졌을 때,  
+Q-Value funtion에 의해서 $Q^*$를 알게 되었다고 가정하자.  
 
-![](/assets/image/2022-02-01-03-00-08.png)
-![](/assets/image/2022-02-01-03-03-33.png)
+$Q^*$는 어떤 행동을 취했을 때 미래에 받을 보상의 최대치 이기 때문에  
+이것을 알게 되면 다음 상태 s'에서도  
+우리는 최적의 경로를 도출 할 수 있게 된다.  
 
-우리는 사전에 K값과 distance를 사용할지 등을 결정해주어야 하는데 <br/>
-이러한 파라미터를 `Hyperparamter` 라고 부른다.<br/>
-그렇다면 우리는 어떤 K값을 사용하는 것이 좋을까? <br/>
+직관적으로 생각해보면 <u>우리는 $Q^*$ 덕분에 어느 상태이던 간에 최적의 보상을 받을 경로를 알기 때문에 우리는 s'에서도 최상의 행동을 취할 수 있다.</u>  
 
-크게 3가지 방법에 대해서 알아보자. 
+그렇다면 최적의 정책은 어떻게 구할 수 있을까?
 
-1. 학습데이터의 정확도와 성능을 최대화 하는 파라미터를 선택
+그에 대한 한 가지 방법은 바로 **Value iteration algorithm**이다.  
 
-   > 결과부터 말하자면 **절대 해서는 안되는 방법**<br/>
-   > 학습데이터에 없던 새로운 데이터에 대해 좋은 성능을 보장할 수 없다. 
-   > ![](/assets/image/2022-02-01-03-20-19.png)
+반복적인 update를 통해서 벨만 방정식을 이용하여  
+점차적으로 $Q^*$를 최적화 시키는 방법을 말한다.  
 
-2. 데이터를 `train`과 `test` set으로 나누어 학습시킨후 가장 성능이 좋은것을 선택
+수학적으로 볼 때 t가 $\infty$ 일 때, $Q$는 최적의 함수로 수렴하게 된다.  
 
-   > 이 방법 역시 **절대 해서는 안되는 방법**<br/>
-   > 머신러닝의 궁극적인 목적은 한 번도 보지 못한 데이터에 대해서 잘 동작하는 것<br/>
-   > 그저 `test set`에서만 잘 동작하는 하이퍼 파라미터를 고른 것일 수 있기 때문<br/>
-   >  ![](/assets/image/2022-02-01-03-20-39.png)
+하지만 여기에 문제점이 하나 있는데 바로 **Scaleable**하지 않다는 것이다.  
 
-3. 데이터를 `train`, `validation`, `test` set으로 분리후 `validation`에서 가장 좋은것을 선택 후<br/>
-   `test`는 단 한 번만 수행하는 방법 
+왜나하면 모든 Q(s,a)에 대해서 계산을 진행해야 하기때문에  
+직관적으로 보더라도 계산량이 어마어마 하다는 것을 알 수 있다.  
 
-    > 해당 방법이 가장 권장되는 방법이고 실제로 많이 쓰인다.<br/>
-    >  ![](/assets/image/2022-02-01-03-21-03.png)
+해결책으로는 <u>Q(s,a)를 계산 가능하도록 근사시키는 방법</u>이 있다!  
 
-4. **Cross-Validation** : `train` 데이터를 여러 부분으로 나눈 뒤 번갈아 가며 `validation`으로 지정<br/>
-   `test` 데이터를 정해놓고 마지막에만 사용하는 방법.
+이러한 복잡한 함수를 근사화 시킬 때에는 Neural Network를 이용하여  
+근사화를 시킨다. (앞선 강의에서도 그렇게 언급했던 기억이 있다.)  
 
-   > 학습 자체가 계산량이 많기 때문에 딥러닝 같은 큰 모델에서는 잘 사용되지 않는다.
-   >  ![](/assets/image/2022-02-01-03-23-28.png)
+## Q - Learning
 
+Neural Network를 이용하여 Q(s,a)를 어떻게 근사 시키는지 알아보자!  
 
-지금까지 우리는 K-Nearest Neighbor를 알아보았다.<br/>
-하지만 K-NN은 이미지를 분류함에 있어서 **절대 사용되서는 안된다.**<br/>
-그 이유는 다음과 같다.<br/>
+이러한 방법으로 근사를 시키는 것을 **Deep Q - Learning**이라고 한다.  
 
-1. 모든 train에 대한 정보를 가지고 있어야 하므로 매우 느리다.
-2. `Distance Metric`은 픽셀단위에서 별로 유용한 정보가 아니다. (not informative)<br/>
-   ![](/assets/image/2022-02-01-03-27-47.png)
-   해당 이미지는 모두 같은 L2 distnace를 갖는다. 
-3. 차원이 늘어나면 필요한 train data가 기하급수적으로 증가한다. (차원의 저주)
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93012083-27eff600-f5d8-11ea-82e7-cb4a1da030c8.png" width = "550" ></p> 
 
+위 슬라이드에서 파란색 화살표로 표시된 Parameter는  
+Neural Network의 weights들과 관련된 parameter $\theta$이다.  
 
+현재 Action-value funtion을 추정하는데 사용한 Q - funtion은  
+**Bellman equation**을 만족하도록 만들어야 한다.  
 
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93012151-ce3bfb80-f5d8-11ea-97a2-1302ff38a3f9.png" width = "550" ></p>  
 
-# Linear Classifcation
+손실함수(Loss function)는 Q(s,a)가 목적함수($y_i$)랑 얼마나 차이가 나는지 측정한다.  
 
-이제는 `Linear Classfiers`에 대해 알아보자. <br/>
+또한 $y_i$는 Bellman equation을 만족하는 정답 방정식이라고 생각하면 된다.  
 
-`Linear classifiers` 는 쉽게 설명하자면 `레고 블럭`과 같다. <br/>
-우리는 이 `레고 블럭` 들을 쌓아서 `Neural Network`를 생성할 수 있다. <br/>
+Backward Pass 과정에서는 Loss값에 대하여 $\theta$를 계속 update를 진행한다.  
 
-앞서 배운 K-NN은 파라미터가 없다. (하이퍼 파라미터는 존재) <br/>
-그저 `training set`을 가지고 있고, 모든 `training set`을 `test time`에 사용할 뿐이다.<br/>
+---
 
-하지만 `Parametric Approach`에서는 트레이닝 데이터의 정보를 요약한후 정보를 `W`에 모아준다. <br/>
-이렇게 하게되면 더 이상 `test time`에서 `training set`이 필요하지 않다. 
+그렇다면 예시를 들어 Q - Learning에 대해서 살펴보자.
 
-![](/assets/image/2022-02-01-03-46-13.png)
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93012226-5b7f5000-f5d9-11ea-9be3-93b992af6d79.png" width = "550" ></p>  
 
-해당 방법은 가장 쉬운 모델 설계방법으로 단순히 `W`와 `x`를 곱할 뿐이다. <br/>
-일부 `bias` 를 더하는 경우도 존재한다. 이때는 **데이터와 무관하게** <br/>
-특정 클래스에 **우선권을 부여**한다. 
-ex) 고양이 데이터가 강아지 데이터 보다 많은 경우 - 고양이 클래스 bias 증가 
+앞서 이야기했던 Atrari Game에 대해서 한 번 살펴보자.  
 
-쉬운 예제를 한번 살펴보자.<br/>
+- 목표는 이 게임에서 가장 높은 점수를 얻는 것이다.  
+- 상태는 게임의 픽셀들이 모두 사용되었다.  
+- 행동은 게임의 방향키를 의미한다.  
+- 보상은 게임에서 받는 점수이다.  
 
-      1. `input imasge`를 열벡터로 펴준다.
-      2. 해당 문제에서는 임의로 정한 `W`가 존재한다. `W` 에 1번에서 만든 열벡터롤 내적해준다.<br/>
+Q - network의 Architecture은 다음과 같다.  
 
-    (정확히는 W의 각행은 각 이미지에 대한 템플릿을 의미)<br/>
-    여기서 내적은 클래스 간 템플릿의 유사도를 측정해주는 기능을 한다.<br/>
+입력으로는 여러 전처리 과정을 거쳐 실제 게임 화면을 84 * 84 크기로 만든 다음  
+4프레임 정도를 누적시켜 넣어준다.  
 
-      3. 내적 결과에 `bias`를 더해준다.<br/>
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93012491-dc3f4b80-f5db-11ea-9f15-7f1789ca555b.png" width = "550" ></p>  
 
-    bias는 독립적인 데이터로 각 클래스에 scailing factor를 더해주는 것.<br/>
+출력은 입력이 들어왔을 때, 각 행동의 Q-value 값이다.  
+여기서는 위, 아래, 왼쪽, 오른쪽 4방향으로 갈 수 있으므로  
+출력이 총 4개의 벡터로 출력된다.  
 
- ![](/assets/image/2022-02-01-03-53-38.png)
+이런 네트워크 구조의 장점은 <u>한 번의 forward pass만으로  
+모든 함수에 대한 Q - value 값을 계산할 수 있다는 것</u>이다.  
 
- 하지만 `Linear Classification`에도 문제점이 존재한다. <br/>
- 각 클래스에 대해서 단 하나의 템플릿만 학습가능하다는 점이다. <br/>
- 이렇게 될 경우 풀수 없는 여러가지 문제들이 존재한다. <br/>
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93012871-9a63d480-f5de-11ea-8097-379c1bcf53c5.png" width = "550" ></p> 
 
-![](/assets/image/2022-02-01-03-56-59.png)
+Q - network를 Training 시킬 때는  
+**Experience Replay**에 대해서 알아야 한다.  
 
-비록 `Linear Classifcation`이 풀지 못하는 다양한 문제들이 존재하지만, <br/>
-아주 쉽게 이해하고 해석할 수 있는 알고리즘 이라는데 의의가 있다. <br/>
+**Experience Replay**에서는 Q - network에서 발생할 수 있는  
+문제들에 대해서 다룬다.  
 
-우리는 지금까지 `Linear Classifier`가 어떻게 생겼고 어떻게 동작하는지를 배웠다 <br/>
-아직 어떻게 `W`를 구할수 있는지는 배우지 않았다.<br/>
-다음 시간에는 `Loss function`, `Optimization`, `CNN`에 대해 배울 예정이다.  
+Q - network는 연속적인 시간의 샘플들을 이용하여  
+Training 시킬 경우 비효율적인데,  
+그 이유는 연속적인 시간의 샘플들의 경우 모든 샘플들이 서로  
+상관관계(Correlation)을 가지기 때문이다.  
 
-# Question
+또한 현재 Q - network의 파라미터를 생각해보면,  
+네트워크가 우리가 어떠한 행동을 해야하는지 정책을 결정한다는 것은  
+우리가 다음 샘플들도 어떤 것이 나왔으면 좋겠다라고 결정하는 의미가 된다.  
 
-1. N개의 examples을 가지고 있을때, NN-classifier의 train, prediction 함수의 시간복잡도는?
+우리는 이러한 두 가지 문제점을 해결하는 방법으로  
+**Experience Replay**를 사용한다.  
 
-   > `Train` O(1), `Predict` O(N) <br/>
-   > predict단계에서 N개의 학습데이터 전부를 테스트이미지와 비교해야만 하므로<br/>
-   > 상당히 느리다. 우리는 train time은 느리더라도 test time은 빠르길 원한다.<br/>
+**Experience Replay**에 대해 설명해보자면  
+**Replay Memory**라는 테이블을 만들고,  
+테이블은 (상태, 행동, 보상, 다음행동)으로 구성되어 있다.  
 
-2. 최적의 하이퍼 파라미터를 찾을때 까지 학습을 다시 시키는 것은 흔한 방법인가?
+그리고 게임을 플레이하면서 이 테이블을 지속적으로 update 시킨다.  
 
-   > 그때 그때 다르다. 하지만 시간적 여유가 있을때는 권장
+따라서 연속적인 시간의 샘플을 사용하는 대신,  
+**Replay Memory**에서 임의로 샘플링된 샘플을 이용한다.  
 
+이런 방법을 이용하는 또 하나의 이유는 가중치 값을 update하는데  
+여러번 갱신을 시킬 수 있기 때문이다.  
 
 
-# Summary
+Deep Q - Learning의 pseudo code를 살펴보면 다음과 같다.  
 
-## K-NN
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93012902-e1ea6080-f5de-11ea-8aab-69dba1e8cd59.png" width = "600" ></p>  
 
-1.  `Image Classification`은 입력 이미지에 대하여 해당 이미지가 속하는 catergory를 찾는 기법<br/>
-    `training set`은 image와 label을 가지고, `test set`은 input의 label을 예측한다. 
-2.  `K-Nearest Neighbors` classifier는 `training set` 중에서 가장 가까운 샘플을 골라서 label을 예측
-3.  K-NN에서 하이퍼 파라미터는 `Distance Metric`과 `K` 이다.
-4.  `L1 (Manhattan)`는 특징에 의존적일 때 사용, `L2 (Eucleadean)`는 특징에 의존적이지 않을 때 사용
-5.  하이퍼 파라미터를 결정할 때, `Validation set` 을 설정하고, `Test set`은 마지막에 오직 1번만 사용한다.
+## 5. Policy Gradients
 
-## Linear Classification  
+Q - Learning에도 문제점이 존재하는데,  
+그건 바로 function이 너무나도 복잡하다는 것이다!  
 
-1. `Linear Classifier`는 `레고 블럭`에 비유가능. `레고 블럭`을 쌓아서 `Nerual Network` 구성
+모든 state에 대해서 Q - value 값이 존재해야 하는데,  
+앞서 봤던 예시의 같은 경우 4방향으로 비교적 state의 갯수가 적었지만,  
 
-2. 수식으로 다음과 같이 표현 가능하다.
+예를 들어 로봇이 어떤 물체를 집는다는 것을 강화학습으로 풀 경우,  
+state의 차원은 매우 높아진다!  
 
-   <p align="center"> 
-   ${ 
-      f(x, W) = Wx + b
-   }$ 
-   </p>
+따라서 새로운 방법이 제시되었는데,  
+**상태에 따른 Q - value값들을 학습시키는 것이 아니라 정책(Policy) 자체를 학습시키는 방법이 제시되었다.**  
 
-3. `x`는 input 이미지, `W`는 이미지에 대한 요약된 정보. `Wx`는 클래스 간 템플릿의 유사도를 측정하는 연산
+그 방법을 **Policy Gradients**라고 부른다.  
 
-4. 각 클래스에 대해서 단 하나의 템플릿만 학습하므로 풀지 못하는 여러 문제가 존재
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93013155-c08a7400-f5e0-11ea-87c2-dbde7f174af1.png" width = "500" ></p>  
 
-5. 아주 쉽게 이해하고 해석할 수 있는 알고리즘 이라는 의의가 있다. 
+$J(\theta)$는 미래에 받을 보상을 누적으로 하여 기댓값을 나타낸 함수이다.  
+
+여기서 우리가 하고 싶은 것은 $J(\theta)$를 최대로 하는 $\theta^*$값을 찾아 내는 것이다.  
+
+여기서는 Gradient Ascent 방법을 이용하여 Parameter 값들을 update 시켜준다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93013362-d6993400-f5e2-11ea-9e8b-8aebee1574ad.png" width = "600" ></p>  
+
+조금 더 구체적으로 **Reinforce Algorithm**에 대해서 살펴보자.  
+
+수학적으로 보면 경로에 대한 미래 보상을 기댓값으로 나타낼 수 있다.  
+
+이를 위해서 경로를 설정해야 하는데, 어떤 정책에 따라 경로가 결정된다.  
+
+Gradient Ascent 방법을 사용하기 위햇 미분을 시켜줘야 하는데,  
+미분을 하게 되면 슬라이드 두번째 나온 수식처럼  
+계산 불가능한 식이 나온다.  
+
+따라서 약간의 trick을 써서 식을 변형해준다.  
+
+맨 아래와 같이 수식을 바꾸면 Monte Carlo sampling에 의해 경로를 샘플링할 수 있게 된다.  
+(자세한 내용은 좀 더 공부를 하고 포스팅을 진행해야 할 것 같다..)  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93013521-3d6b1d00-f5e4-11ea-8144-74f43bf572e5.png" width = "600" ></p>
+
+좀 더 식을 자세히 살펴보자.  
+
+우리는 과연 전이 확률을 모르는데 
+$p(\tau ; \theta)$를 계산할 수 있을까?
+
+정답을 미리 얘기하자면 <u>계산할 수 있다!</u> 
+
+우리가 $log$를 이용하게 되면 그에 대한 성질로  
+곱을 합으로 바꿔주는 성질을 이용할 수 있는데,  
+
+미분을 하려고 할 때 정책에 대한 함수만 고려해주면 되므로,  
+우리는 전이 확률을 구체적으로 몰라도 $J(\theta)$의 미분 값을 계산할 수 있다.  
+
+**즉, 구체적인 값(Q-value)을 몰라도 정책 자체의 gradient를 구해 최적의 정책을 찾을 수 있다.**  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93014239-6e4e5080-f5ea-11ea-9545-74c66657cef7.png" width = "500" ></p>  
+
+직관적으로 어떤 경로에 대해 높게 평가했다면  
+경로에 해당하는 모든 행동들이 좋았다고 평가하고,  
+
+어떤 경로에 대해 낮게 평가한다면  
+경로에 해당하는 모든 행동들이 나쁘다고 평가하는 것이다.  
+
+하지만 기댓값에 의해서 모든 값들이 Average out된다  
+(평균적으로 맞춰진다).  
+
+충분히 많은 샘플링을 거친다면 Gradient를 이용해서  
+최적의 parameter 값을 찾아 낼 수 있다.  
+
+하지만 여기서 고려해야 할 것이 한 가지 존재한다.  
+
+**바로 분산이 너무 높다는 문제가 발생한다.**
+
+우리가 어떤 최적의 정책을 찾았을 때, 그 정책에 포함된 행동들에 대해서 좋았다고 평가를 하는데 Average out때문에 구체적으로 어떤 행동이 좋은 정책을 만들어 내는지는 알지 못한다.  
+
+좋은 Estimator를 위해서는 분산을 낮추고, 샘플링을 많이해서  
+좋은 Estimator가 어떤 것인지 찾아내는 수 밖에 없다.  
+
+**분산을 줄이는 것은 Policy Gradient에서 가장 중요한 요인 중 하나이다.**
+
+분산이 줄어들면 샘플링을 적게해도 좋은 Estimator를 찾을 수 있기 때문이다.  
+
+분산을 줄일 수 있는 **첫 번째 방법**을 소개하자면,  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93014333-55926a80-f5eb-11ea-99ef-6b264759aa64.png" width = "500" ></p> 
+
+<u>해당 상태로부터 받을 미래 보상만을 고려하여 어떤 행동을 취할 확률을 키워주는 방법</u>이다.  
+
+이 방법은 해당 경로에서 얻을 수 있는 전체 보상을 고려하는 대신에, 현재 step에서 종료 시점까지 얻을 수 있는 보상의 합을 고려하는 전략이다.  
+
+**두 번째 방법**을 소개하면,  
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93014391-b621a780-f5eb-11ea-94ff-e72caa062bf6.png" width = "400" ></p> 
+
+<u>지연된 보상에 의해서 할인률을 적용하는 것</u>이다.  
+
+할인률이 의미하는 것은 바로 받을 보상과 먼 미래에 받을 보상에 대해서 구분해 주는 것을 말한다.  
+
+분산을 줄이기 위한 **세 번째 방법**은 Baseline이라는 방법이다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93014468-39db9400-f5ec-11ea-8000-2aa6bd75c48a.png" width = "500" ></p> 
+
+경로에서부터 계산한 값을 그대로 사용하는 것은 문제가 있는데,  
+그 값이 의미있는 값인지 아닌지 모르기 때문이다.  
+
+**중요한 것은 우리가 얻은 보상이 우리가 얻을 것이라고 예상했던 것 보다 좋은건지 아닌건지 판단하는 것이다.**  
+
+Baseline funtion은 해당 상태에서 우리가 얼마만큼의 보상을 원하는지 설명해주는 함수이다.  
+
+그리고 이것을 기준으로 세워 수식에 적용하면 미래에 얻을 보상의 합을 특정 기준이 되는 값에서 빼주는 형태가 된다.  
+
+이를 통해 우리가 예상했던 보상보다 좋은건지 나쁜건지 판단을 할 수 있게 된다.  
+
+그렇다면 어떻게 Baseline funtion을 정의할 수 있을까?
+
+가장 간단한 방법은 <u>우리가 지금까지 경험했던 보상들에 대해서  
+Moving average 값을 취해주는 방법</u>이다.  
+
+그렇다면 더 좋은 baseline function은 어떻게 정의할 수 있을까?
+
+우리는 어떤 행동이 그 상태에서의 기댓값보다 좋은 경우에 그 행동을 수행할 확률이 커지는 것을 원한다.  
+
+따라서 앞서 우리가 배웠던 **Value funtion**을 이용하여 baseline에 적용해보자.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93014773-d30baa00-f5ee-11ea-89a5-09ed9f7ee199.png" width = "500" ></p> 
+
+현재 행동이 얼마나 좋은 행동이였는지  
+Q - function과 Value function의 차이를 통해 나타낸다.  
+
+그렇다면 우리는 구체적인 Q - function과 Value function이 무엇인지 알아야 할까?  
+
+아니다! **우리는 Policy gradient와 Q-learning을 조합해서 Training을 시킬 수 있다.**
+
+구체적으로 우리는 이 알고리즘을 **Actor-Critic Algorithm**이라고 부른다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93014914-ed925300-f5ef-11ea-8c2c-f4e1b6d379a3.png" width = "600" ></p> 
+
+<u>Actor는 Policy로 우리가 어떤 상태를 결정할지 정해주는 녀석</u>이고,  
+<u>Critic은 Q-function으로 그 행동이 얼마나 좋았으며 어떤 식으로 조절해 나가야하는지 알려주는 녀석</u>이다.  
+기존 Q-function은 모든 (상태, 액션) 조합에 대해서 학습을 진행해야 했지만, 여기서는 정책이 정해준 (상태, 액션) 조합에 대해서만 학습을 진행하면 된다.  
+
+내 생각에 마치 GAN을 training 시키는 것과 비슷하다고 생각한다. 
+
+슬라이드 맨 아래에 보이는 수식을 Advantage funtion이라고 하고  
+Q - function - Value function 으로 정의한다.  
+
+Advantage funtion은 그 행동이 예상했던 것보다 얼마나 더 큰 보상을 주는지 알려주는 함수이다.  
+
+Actor-Critic Algorithm의 pseudo code는 다음과 같다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93015035-db64e480-f5f0-11ea-83a6-a79a03743372.png" width = "300" ></p> 
+
+> 1. 우선 $\theta, \phi$를 초기화 시킨다.
+> 2. 현재의 policy를 기반으로 M개의 경로를 샘플링한다.
+> 3. Gradient를 계산한다.
+    각 경로마다 보상 함수를 계산하고 이용한다.
+> 4. 보상함수를 이용해서 gradient estimator를 계산하고 
+    이를 전부 누적시킨다.
+> 5. $\phi$를 학습시키기 위해 가치 함수를 학습시킨다.
+    가치 함수는 보상 함수와 동치이므로, 가치 함수가 벨만 방정식(Bellman equation)에 근접하도록 학습시킨다.
+> 6. 앞선 단계를 계속 반복한다.
+
+---
+
+그렇다면 예제를 통해 reinforcement algorithm을 살펴보자.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93015119-cccafd00-f5f1-11ea-9dea-a7a9cd3d0878.png" width = "600" ></p> 
+
+RAM(Recurrent Attention Model)은 hard attention과 관련이 있는데,  
+Hard attention은 Image classification 문제를 푸는데 이미지의 일련의 glimpses(짧은 시간안에 일부분을 보는 것)를 가지고만 예측을 하는 Task이다.  
+
+이런 식의 접근 방법은 인간의 안구 운동에 따른 지각 능력으로 부터 영감을 받은 것이다.  
+
+또한 지역적인 부분만 보고 전체 이미지를 예측한다면 계산적인 측면에서도 크게 효율적으로 적용할 수 있다.  
+
+이미지의 노이즈를 고려하지 않기 때문에 실제로 classification도 더 잘 할 수 있다.  
+
+이 문제를 강화학습으로 풀어보자.
+
+- 상태는 지금까지 관찰한 glimpses
+- 행동은 다음에 어떤 부분을 볼 것인지 결정한는 것
+- 보상은 classification의 성공 유무
+
+이 문제가 강화학습이 필요한 이유는 이미지에서 glimpses를 뽑아내는 것이 미분 불가능하기 때문이다.  
+그리고 어떻게 glimpses를 얻어 낼 것인지 정책을 통해 학습을 할 수 있다.  
+
+상태를 선택하는 것에 있어 RNN을 이용하여 모델링을 한다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93015435-81feb480-f5f4-11ea-9665-a8f82cbc254c.png" width = "600" ></p> 
+
+이번에 배운 강화학습을 한 슬라이드로 정리하면 다음과 같다.  
+
+<p align="center"><img src="https://user-images.githubusercontent.com/41863759/93015456-a064b000-f5f4-11ea-98ba-d729953406a7.png" width = "600" ></p> 
