--- a/_posts/Pytorch/2022-02-05-Pytorch(4).md
+++ b/_posts/Pytorch/2022-02-05-Pytorch(4).md
@@ -1,5 +1,5 @@
 ---
-title : "Pytorch 기초"
+title : "Pytorch 기초 - torch, autograd"
 category :
     - pytorch
 tag :
@@ -10,7 +10,7 @@ toc : true
 toc_sticky: true
 comments: true
 ---
-Pytorch의 구성요소에 대하여 알아보자. 
+Pytorch의 torch와 autograd에 대하여 알아보자. 
 
 
 # 파이토치의 구성요소
@@ -496,10 +496,12 @@ print(x.eq(y).all()) # tensor(True)
 - 계산 흐름
 - a -> b-> c-> out
 
-$${\frac{\nabla out}{\nabla a}} = ? $$
+
 
 - backward()를 통해
-- a <- b <- c <- out을 계산하면 ${{\frac{\nabla out}{\nabla a}}}$ 값이 `a.grad`에 채워짐
+- a <- b <- c <- out을 계산하면 
+
+out을 a로 미분한 값이 `a.grad`에 채워짐
 
 
 ```python
