--- a/_posts/Paper_review/2022-04-05-PointNet.md
+++ b/_posts/Paper_review/2022-04-05-PointNet.md
@@ -14,29 +14,63 @@ comments: true
 
 ![](/assets/image/2022-05-02-23-08-43.png)
 
-3D Vision을 공부하다보면, 가장 영향력있는 논문중 하나로 해당 논문이 꼽을 수 있다.  해당 모델에 대하여 한 번 살펴보도록 하자. 
+3D Vision을 공부하다보면, 가장 영향력있는 논문중 하나로 해당 논문을 꼽을 수 있다.  
 PointNet의 논문 제목은 'PointNet: Deep Learning on Point Sets for 3D Classification and Segmentation'이다. 
 
-Point cloud로 이루어진 데이터들은 일반적으로 irregular format으로 얻어진다. 따라서 특정 order에 의해 grouping된 상태로 얻어진 것이 아니기에 일반적으로 polygon, voxel로 point data를 rendering 한 후 사용해왔다. 
 
-PointNet은 **point data를 rendering 하지 않고 직접 다루는 방법을 제시한 최초의 모델**이다. 
-
-이 방법을 사용하면, 학습과정에서 시간과 메모리의 낭비를 줄일수 있다. 
-
-PointNet은 raw point cloud를 입력으로 받아 Classification, Part Segmentation, Semantic Segmentation 결과를 얻어낸다.  
-
+해당 논문에 대하여 알아보도록 하자.
 
 ## 0. 논문 
 본 논문은 <font color='#1E90FF'> CVPR 2016 </font>에서 소개되었으며, 현재 인용 8000건 가량 된다.  
 원본 논문에 대한 자료는 [arXiv](https://arxiv.org/abs/1512.03385)에서 확인할 수 있다.  
 
 
+## 1. Introduction
+
+Point cloud로 이루어진 데이터들은 일반적으로 irregular format으로 얻어진다. 이것은 특정 order에 의해 grouping된 상태로 얻어진 것이 아니기에 일반적으로 **polygon, voxel로 point data를 rendering** 한 후 사용해왔다. 
+
+즉, irregular form을 regular form으로 바꾸려는 시도가 있었으나
+
+이러한 변환은 데이터를 불필요하게 대량으로 렌더링 한다.(학습시간, 메모리의 낭비) <br/>
+
+데이터의 quantization을 도입하려는 시도도 있었지만 이 방법은 natural invariances를 해치는 문제가 발생한다.  (continuous space -> discrete space)
+
+PointNet은 **point data를 rendering 하지 않고 Point cloud를 직접 다루는 방법을 제시한 최초의 모델**이다. 
+
+이 방법을 사용하면, 학습과정에서 시간과 메모리의 낭비를 줄일수 있다. 
 
 해당 논문에서는 PointNet이 가져야 하는 2가지 특성을 제시한다. 
 
-
 1. Permutation invariant
+    > point cloud는 unorderd데이터 이므로 어떤 순서로 들어오더라도 그 특성이 변화해서는 안된다. <br/>
+    > N개의 input이 있을때, N!개의 조합이 가능한데, 어떻게 들어오던간에 출력은 동일해야함. 
 2. Rigid motion invariant
+    > 어떤 transforamtion이 point cloud 내의 모든 점에 취해지더라도 point 간의 거리, 방향은 그대로 유지되어야 함.
+
+PointNet은 raw point cloud를 input으로하여 Classification, Part Segmentation, Semantic Segmentation label등으로 output을 생성한다. 
+
+## 2. Related Work
+
+- Point Cloud Features
+    > 통계적 특성을 encode하여 certian transformations에서 invariant하도록 디자인 <br/>
+    > ex) intrinsic or extrinsic <br/>
+    > local and global features로 분류될 수 있음. 
+
+- Deep Learning on 3D data 
+    > Volumetric CNN : voxelized shapes에서 동작하는 3D CNN
+    > 하지만, volumetric representation은 data sparsity와 3D conv 연산량에 의한 제약이 존재 
+    > FPNN, Vote3D : very large point clouds 는 불가능
+    > MultiView CNN : 3D point cloud를 render하여 2D 이미지로 바꾼뒤 2D CNN 사용 시도. 
+    > Spectral CNN : manifold meshes에 제약이 존재. non-isometric shapes로 확장하는 방법이 불분명
+    > Featur-based DNN :3D data를 vector로 변경후 FC net사용. 특징을 추출하는 power에 제약
+
+- Deep Learning on Unordered Sets 
+    > 
+
+## 3.  
+
+## 4. Experiments
+
 
 
 
