--- a/_posts/Paper_review/2022-04-05-PointNet.md
+++ b/_posts/Paper_review/2022-04-05-PointNet.md
@@ -102,12 +102,12 @@ PointNet은 raw point cloud를 input으로하여 Classification, Part Segmentati
 #### Max Pooling
 
 Model을 input에 대하여 invariant 하게 만들기 위해선 3가지 전략을 취할 수 있다.
-1) sort input int a canonical order 
-   > 고차원 공간에서 point permutation에 stable한 order가 존재하지 않으므로 불가능
-2) treat the input as a sequence to train an RNN 
+1) sort input int a canonical order <br/><br/>
+   > 고차원 공간에서 point permutation에 stable한 order가 존재하지 않으므로 불가능<br/><br/>
+2) treat the input as a sequence to train an RNN <br/><br/>
    > 모든 permutation을 고려한다면 가능하지만, N!이 large scale이 되는 경우에 적용 가능한지 보장 불가능
 3) Use a simple symmetric function to aggregate the information from each point
-   > mlp와 max pooling을 사용시, general function을 symmetric function으로 근사할 수 있고 <br/>
+   > mlp와 max pooling을 사용시, general function을 symmetric function으로 근사할 수 있고 <br/><br/>
    > 이것은 permutation invariant를 가능하게한다. (max pooling은 최댓값을 뽑아내므로 입력에 대하여 순서가 상관없기 때문)
 
 ![](/assets/image/2022-05-09-17-34-11.png)
@@ -192,17 +192,17 @@ rigid motion이 되기 때문이다.
 
 ### 5.1. Applications
 1. 3D Object Classification 
-    > 12,311개의 CAD models을 사용하였으며, 대략 3/4, 1/4를 train, test set으로 분리하였음 <br>
-    > input point cloud는 mesh faces에서 1024개의 point들을 sampling후 unit sphere로 normalize <br>
-    > data augmentation 으로 up-axis 축을 따라 랜덤하게 rotate 혹은 값에 gaussian noise를 추가 <br>
+    > 12,311개의 CAD models을 사용하였으며, 대략 3/4, 1/4를 train, test set으로 분리하였음 <br><br>
+    > input point cloud는 mesh faces에서 1024개의 point들을 sampling후 unit sphere로 normalize <br><br>
+    > data augmentation 으로 up-axis 축을 따라 랜덤하게 rotate 혹은 값에 gaussian noise를 추가 <br><br>
 
 2. 3D Object Part Segmentation
-   > part segmentation은 per-point classification problem으로 간주 <br>
+   > part segmentation은 per-point classification problem으로 간주 <br><br>
    > metric으로 shape의 mIoU를 사용. 겹치는 point는 IoU에 포함시켜 측정
 
 3. 3D Part Segmentation
-   > 각 point는 (X, Y, Z) 좌표와 (R, G, B) + normalized location 정보를 사용 <br>
-   > point 하나당 9-dim vector  <br>
+   > 각 point는 (X, Y, Z) 좌표와 (R, G, B) + normalized location 정보를 사용 <br><br>
+   > point 하나당 9-dim vector  <br><br>
    > 추가로 hand-craft feature로 locla features, local curvature, normal를 추가하여 12-dim vector 사용
 
 ### 5.2. Architecture Design Analysis
