--- a/_posts/3dML/2022-05-25-MLfor3D_2 .md
+++ b/_posts/3dML/2022-05-25-MLfor3D_2 .md
@@ -11,3 +11,21 @@ toc : true
 toc_sticky: true
 comments: true
 ---
+Point Cloud Processing에 대해 알아보자.
+
+# 복습
+지난 시간에 배운 내용을 살펴보면 
+
+Voxels는 3D data의 sparsity를 다룰할 필요가 있다. 
+
+Points Cloud의 장점은 생성이 쉽고 단점은  메모리 효율이 나쁘고, render/texture 불가능한 것이다. 
+
+Mesh의 장점은 메모리 효율이 좋고, render/texture 가능. 단점은 생성이 어렵다는 것이다.
+
+# PointNet
+
+PointNet 자세한 논문리뷰는 [여기](https://younghyun197.github.io/paper_review/PointNet/)에서 확인가능하다. 
+
+
+PointNet은 Input 으로 Point Cloud (2D arary)를 사용한다. 
+
